# openglstuff

./: .gitignore  CMakeLists.txt  LICENSE  concentric_triangles.cpp  main.cpp  rectangle.cpp
